--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loadingg": "^1.7.2",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
